--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,7 @@
   </head>
   <body>
     <!-- W taki sposbu dodajemy fragmenty w główny HTML-plik strony. TO JEST TEST-->
+    <include src="./partials/header.html"></include>
     <include src="./partials/example.html"></include>
     <!-- Skrypt jest na samym dole kodu. On juz ma w sobie podłączony SAAS plik. -->
     <script src="./index.js" type="module"></script>
