--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
     />
 
     <link rel="stylesheet" href="./sass/main.min.css" />
-    <link rel="stylesheet" href="./sass/main.css.min.map" />
+    <link rel="stylesheet" href="./sass/main.min.css.map" />
   </head>
   <body>
     <!-- W taki sposbu dodajemy fragmenty w główny HTML-plik strony. TO JEST TEST-->
