--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
   <body>
     <!-- W taki sposbu dodajemy fragmenty w główny HTML-plik strony. TO JEST TEST-->
     <include src="./partials/header.html"></include>
-    <include src="./partials/header.html"></include>
+    <include src="./partials/example.html"></include>
     <include src="./partials/hero.html"></include>
     <include src="./partials/products.html"></include>
     <!-- Skrypt jest na samym dole kodu. On juz ma w sobie podłączony SAAS plik. -->
