--- a/src/index.html
+++ b/src/index.html
@@ -18,8 +18,8 @@
       rel="stylesheet"
     />
 
-    <link rel="stylesheet" href="./sass/main.min.css" />
-    <link rel="stylesheet" href="./sass/main.min.css.map" />
+    <link rel="stylesheet" href="./sass/main.css" />
+    <link rel="stylesheet" href="./sass/main.css.map" />
   </head>
   <body>
     <!-- W taki sposbu dodajemy fragmenty w główny HTML-plik strony. TO JEST TEST-->
