--- a/src/index.html
+++ b/src/index.html
@@ -10,8 +10,11 @@
       integrity="sha512-ISS7cAi1PEhQ8jnbJpJZMd29NlhNj4AWYyLOSp2CE/CsHxTCu+r+t0D2yoJudVrd0/8fTVPUVDzY5Tvli75u/g=="
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="./css/main.min.css" />
   </head>
   <body>
+    <include src="./partials/about.html"></include>
+
     <!-- W taki sposbu dodajemy fragmenty w główny HTML-plik strony. TO JEST TEST-->
     <include src="./partials/example.html"></include>
 
