--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
     <include src="./partials/header.html"></include>
     <include src="./partials/advantages.html"></include>
     <include src="./partials/about.html"></include>
-    <include src="./partials/example.html"></include>
+    <!--<include src="./partials/example.html"></include> Na razie nie wyrzucam, ale zakomentowuję, bo już powoli oglądajmy naszą stronę-->
     <!-- Skrypt jest na samym dole kodu. On juz ma w sobie podłączony SAAS plik. -->
     <script src="./index.js" type="module"></script>
   </body>
