--- a/src/index.html
+++ b/src/index.html
@@ -24,6 +24,7 @@
   <body>
     <!-- W taki sposbu dodajemy fragmenty w główny HTML-plik strony. TO JEST TEST-->
     <include src="./partials/header.html"></include>
+    <include src="./partials/hero.html"></include>
     <include src="./partials/advantages.html"></include>
     <include src="./partials/about.html"></include>
     <include src="./partials/example.html"></include>
