--- a/src/index.html
+++ b/src/index.html
@@ -18,10 +18,8 @@
       rel="stylesheet"
     />
 
-
     <!-- poniżej link do swipera - customer reviews-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css" />
-
   </head>
   <body>
     <!-- W taki sposbu dodajemy fragmenty w główny HTML-plik strony. TO JEST TEST-->
@@ -37,6 +35,6 @@
     <!-- Skrypt jest na samym dole kodu. On juz ma w sobie podłączony SAAS plik. -->
     <script src="./index.js" type="module"></script>
     <!-- poniżej skrypt do Customer Review - swiper-->
-    <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
+    <script src="./review.js" type="module"></script>
   </body>
 </html>
