--- a/src/index.html
+++ b/src/index.html
@@ -22,10 +22,11 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css" />
   </head>
   <body>
-    <!-- W taki sposbu dodajemy fragmenty w główny HTML-plik strony. TO JEST TEST-->
+    <!-- W taki sposbu dodajemy fragmenty w główny HTML-plik strony. ST TEST-->
     <include src="./partials/header.html"></include>
     <include src="./partials/hero.html"></include>
     <include src="./partials/products.html"></include>
+    <include src="./partials/buttons.html"></include>
 
     <include src="./partials/advantages.html"></include>
     <include src="./partials/about.html"></include>
