--- a/src/index.html
+++ b/src/index.html
@@ -12,9 +12,9 @@
     />
   </head>
   <body>
-    <!-- W taki sposbu dodajemy fragmenty w główny HTML-plik strony. TO JEST TEST-->
-    <include src="./partials/example.html"></include>
-    <!-- Skrypt jest na samym dole kodu. On juz ma w sobie podłączony SAAS plik. -->
+    <include src="./partials/gallery.html"></include>
+
+    
     <script src="./index.js" type="module"></script>
   </body>
 </html>
