--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,8 @@
 
     <!-- poniżej link do swipera - customer reviews-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css" />
+
+    <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
   </head>
   <body>
     <!-- W taki sposbu dodajemy fragmenty w główny HTML-plik strony. ST TEST-->
