--- a/src/index.html
+++ b/src/index.html
@@ -38,6 +38,6 @@
     <!-- Skrypt jest na samym dole kodu. On juz ma w sobie podłączony SAAS plik. -->
     <script src="./index.js" type="module"></script>
     <!-- poniżej skrypt do Customer Review - swiper-->
-    <!--<script src="./review.js" type="module"></script>-->
+    <script src="./swiper.js" type="module"></script>
   </body>
 </html>
