--- a/src/index.html
+++ b/src/index.html
@@ -32,6 +32,7 @@
 
     <include src="./partials/advantages.html"></include>
     <include src="./partials/about.html"></include>
+    <include src="./partials/gallery.html"></include>
     <include src="./partials/review.html"></include>
     <!--<include src="./partials/example.html"></include> Na razie nie wyrzucam, ale zakomentowuję, bo już powoli oglądajmy naszą stronę-->
     <include src="./partials/footer.html"></include>
