Section About is done

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
       referrerpolicy="no-referrer"
     />
     <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;800;900&family=Seymour+One&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;800;900&family=Seymour+One&display=swap"
       rel="stylesheet"
     />
 
@@ -37,6 +37,8 @@
     <include src="./partials/footer.html"></include>
     <!-- Skrypt jest na samym dole kodu. On juz ma w sobie podłączony SAAS plik. -->
     <script src="./index.js" type="module"></script>
+    <!-- Poniżej skrypt do okna modalnego sekcji About -->
+    <script src="./js/about/about-modal.js" type="module"></script>
     <!-- poniżej skrypt do Customer Review - swiper-->
     <script src="./swiper.js" type="module"></script>
   </body>
