Init modal menu

--- a/src/index.html
+++ b/src/index.html
@@ -42,5 +42,6 @@
     <script src="./js/about/about-modal.js" type="module"></script>
     <!-- poniżej skrypt do Customer Review - swiper-->
     <script src="./swiper.js" type="module"></script>
+    <script defer src="./menu-modal.js" type="modul"></script>
   </body>
 </html>
