--- a/src/index.html
+++ b/src/index.html
@@ -32,7 +32,7 @@
     <include src="./partials/about.html"></include>
     <include src="./partials/review.html"></include>
     <!--<include src="./partials/example.html"></include> Na razie nie wyrzucam, ale zakomentowuję, bo już powoli oglądajmy naszą stronę-->
-
+    <include src="./partials/contacts.html"></include>
     <!-- Skrypt jest na samym dole kodu. On juz ma w sobie podłączony SAAS plik. -->
     <script src="./index.js" type="module"></script>
     <!-- poniżej skrypt do Customer Review - swiper-->
