--- a/src/index.html
+++ b/src/index.html
@@ -43,5 +43,6 @@
     <!-- poniżej skrypt do Customer Review - swiper-->
     <script src="./swiper.js" type="module"></script>
     <script defer src="./menu-modal.js" type="modul"></script>
+    <script src="./products-modal.js" type="module"></script>
   </body>
 </html>
